fix: add overflow

--- a/singolo1.css
+++ b/singolo1.css
@@ -216,7 +216,7 @@ li:last-child::after {
 }
 
 .main {
-  height: 465px;
+  height: 459px;
   padding: 30px 40px 0 40px;
   background-color: #f2f2f2;
   border-bottom: 6px solid #ffffff;
@@ -246,7 +246,6 @@ li:last-child::after {
   font-family: "Lato-Light", sans-serif;
   font-weight: 300;
   text-align: left;
-  text-overflow: clip;
   color: #666d89;
 }
 
@@ -260,6 +259,7 @@ li:last-child::after {
 
 .services-item {
   display: inline-grid;
+  height: 95px;
   padding: 0;
   grid-template-columns: 60px 219px;
   grid-template-areas:
@@ -268,6 +268,7 @@ li:last-child::after {
   grid-column-gap: 20px;
   grid-row-gap: 10px;
   align-items: start;
+  overflow: hidden;
 }
 
 .services-item-icon {
